feat: PDF ticket/voucher generation, schema updates, and layout fixes
Backend: add TicketPdfService and ComprobantePdfService for 80mm thermal printing,
PasajeResponseDTO, extend pasaje/encomienda/cliente/viaje entities and services
with inline client registration, destino field, and QR code support.
Database: schema updated to match new entity fields.
Frontend: fix DashboardLayout sidebar shrink, update pasajes/encomiendas pages
with new flow, sync qrcode package version.